@@ -1,3 +1,11 @@
+08-10/11/14
+-fixed a bug that used to remove the scalebar when the image was clicked on
+-fixed a bug in FiguR. Software failed to load any column containing an NA value
+-fixed theme not showing in FiguR
+-added a button to reset theme
+-fixed preview not showing when performing check size on a panel
+-fixed a non reproducible/system dependent freezing bug when applying checks to an image
+
 03/11/14
 -fixed minor bugs (e.g. erroneous positioning of the insets when using the "ROI --> inset" function)
 -removed unnecessary variables in the main SF class
